--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ x-configurations: &configurations >
   --disable-rightleft
   --disable-arabic
   --enable-gui=no
-  --with-compiledby='sasa+1'
+  --with-compiledby=sasa+1
   --with-features=huge
   --with-luajit
   --without-x
