--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -226,11 +226,15 @@ jobs:
         run: |
           curl -fsSL https://github.com/sasaplus1/vim/releases/latest/download/vim-linux-sha256sum.txt -o vim-linux-sha256sum-latest.txt
           curl -fsSL https://github.com/sasaplus1/vim/releases/latest/download/vim-macos-sha256sum.txt -o vim-macos-sha256sum-latest.txt
-          if sha256sum --check vim-linux-sha256sum-latest.txt --check vim-macos-sha256sum-latest.txt
+          curl -sSL  https://github.com/sasaplus1/vim/releases/latest/download/VERSION -o VERSION-latest
+          printf -- 'all:\n\t@echo $(VIM_VER)' | make -f vim-kaoriya/VERSION -f - > VERSION
+          export VERSION="$(cat VERSION | tr -d '\n')"
+          echo "::set-output name=version::$VERSION"
+          if [ "$VERSION" != "$(cat VERSION-latest)" ]
           then
-            echo '::set-output name=diff::false'
-          else
             echo '::set-output name=diff::true'
+          else
+            echo '::set-output name=diff::false'
           fi
       - id: create_release
         uses: actions/create-release@v1.0.0
@@ -238,6 +242,8 @@ jobs:
         with:
           tag_name: release-${{ github.sha }}
           release_name: ${{ github.sha }}
+          body: |
+            Vim version ${{ steps.shasum_check.outputs.version }} +kaoriya
       - uses: actions/upload-release-asset@v1.0.1
         if: steps.shasum_check.outputs.diff
         with:
@@ -293,4 +299,11 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: vim-macos-sha256sum.txt
           asset_name: vim-macos-sha256sum.txt
+          asset_content_type: text/plain
+      - uses: actions/upload-release-asset@v1.0.1
+        if: steps.shasum_check.outputs.diff
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: VERSION
+          asset_name: VERSION
           asset_content_type: text/plain
