--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -165,6 +165,7 @@ jobs:
       - run: tar cfJ vim-macos.tar.xz ./vim-macos
       - run: zip -qr vim-macos.zip ./vim-macos
       - run: sha256sum vim-macos.* > vim-macos-sha256sum.txt
+      - run: cp ./vim-kaoriya/VERSION .
       - uses: actions/upload-artifact@master
         with:
           name: vim-macos.tar.gz
@@ -181,6 +182,10 @@ jobs:
         with:
           name: vim-macos-sha256sum.txt
           path: vim-macos-sha256sum.txt
+      - uses: actions/upload-artifact@master
+        with:
+          name: VERSION
+          path: VERSION
   release:
     name: create release and upload assets
     runs-on: ubuntu-latest
@@ -222,12 +227,16 @@ jobs:
         with:
           name: vim-macos-sha256sum.txt
           path: .
+      - uses: actions/download-artifact@master
+        with:
+          name: VERSION
+          path: .
       - id: shasum_check
         run: |
           curl -fsSL https://github.com/sasaplus1/vim/releases/latest/download/vim-linux-sha256sum.txt -o vim-linux-sha256sum-latest.txt
           curl -fsSL https://github.com/sasaplus1/vim/releases/latest/download/vim-macos-sha256sum.txt -o vim-macos-sha256sum-latest.txt
           curl -sSL  https://github.com/sasaplus1/vim/releases/latest/download/VERSION -o VERSION-latest
-          printf -- '%b' 'all:\n\t@echo $(VIM_VER)' | make -f vim-kaoriya/VERSION -f - > VERSION
+          printf -- '%b' 'all:\n\t@echo $(VIM_VER)' | make -f VERSION -f - > VERSION
           export VERSION="$(cat VERSION | tr -d '\n')"
           echo "::set-output name=version::$VERSION"
           if [ "$VERSION" != "$(cat VERSION-latest)" ]
