--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -250,8 +250,7 @@ jobs:
         with:
           tag_name: release-${{ github.sha }}
           release_name: ${{ github.sha }}
-          body: |
-            Vim version ${{ steps.version_check.outputs.version }} +kaoriya
+          body: Vim ${{ steps.version_check.outputs.version }} +kaoriya
       - uses: actions/upload-release-asset@v1.0.1
         if: steps.version_check.outputs.diff
         with:
