add assignee for renovate PR

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -3,6 +3,7 @@
     "config:base",
     ":automergePatch",
     ":label(renovate)",
+    ":assignee(sasaplus1)",
     ":timezone(Asia/Tokyo)"
   ]
 }
