--- a/.travis.yml
+++ b/.travis.yml
@@ -155,7 +155,7 @@ before_deploy:
     "vim-macos-${version}.zip"
     > "vim-macos-${version}-sha256sum.txt"
   - export TRAVIS_TAG="release-${TRAVIS_COMMIT}"
-  - git tag "${TRAVIS_TAG}"
+  - git tag "${TRAVIS_TAG}" || true
 
 deploy:
   provider: releases
